--- a/project/settings/local-py.dist
+++ b/project/settings/local-py.dist
@@ -1,33 +1,4 @@
-# This is an example settings/local.py file.
-# These settings overrides what's in settings/base.py
-
-# To extend any settings from settings/base.py here's an example:
-#from . import base
-#INSTALLED_APPS = base.INSTALLED_APPS + ['debug_toolbar']
-
-DATABASES = {
-    'default': {
-        'ENGINE': 'django.db.backends.mysql',
-        'NAME': 'django_app',
-        'USER': 'root',
-        'PASSWORD': '',
-        'HOST': '',
-        'PORT': '',
-        'OPTIONS': {
-            'init_command': 'SET storage_engine=InnoDB',
-            'charset' : 'utf8',
-            'use_unicode' : True,
-        },
-        'TEST_CHARSET': 'utf8',
-        'TEST_COLLATION': 'utf8_general_ci',
-    },
-    # 'slave': {
-    #     ...
-    # },
-}
-
-# Uncomment this and set to all slave DBs in use on the site.
-# SLAVE_DATABASES = ['slave']
+from . import base
 
 # Recipients of traceback emails and other notifications.
 ADMINS = (
@@ -43,16 +14,47 @@ DEBUG = TEMPLATE_DEBUG = True
 # instances and False on stage/prod.
 DEV = True
 
-# # Playdoh ships with sha512 password hashing by default. Bcrypt+HMAC is safer,
-# # so it is recommended. Please read <https://github.com/fwenzel/django-sha2#readme>,
-# # then switch this to bcrypt and pick a secret HMAC key for your application.
-# PWD_ALGORITHM = 'bcrypt'
-# HMAC_KEYS = {  # for bcrypt only
-#     '2011-01-01': 'cheesecake',
-# }
-
 # Make this unique, and don't share it with anybody.  It cannot be blank.
 SECRET_KEY = ''
+
+PIPELINE_AUTO = True
+
+INSTALLED_APPS = list(base.INSTALLED_APPS) + [
+    'django.contrib.admin',
+    'django.contrib.admindocs',
+
+    # Example code. Can (and should) be removed for actual projects.
+    'project.example',
+
+    # For development
+    'debug_toolbar',
+    'devserver',
+]
+
+SENTRY_DSN = 'http://f048433575ef40ebaaf70e9a5d4cf209:491a6518484046d990123ed3812bdcb1@127.0.0.1:9000/1'
+
+SECRET_KEY = '123'
+
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': 'django_app.sq3',
+        'USER': '',
+        'PASSWORD': '',
+        'HOST': '',
+        'PORT': '',
+#        'OPTIONS': {
+#            'init_command': 'SET storage_engine=InnoDB',
+#            'charset' : 'utf8',
+#            'use_unicode' : True,
+#            },
+#        'TEST_CHARSET': 'utf8',
+#        'TEST_COLLATION': 'utf8_general_ci',
+        },
+    # 'slave': {
+    #     ...
+    # },
+}
 
 # Uncomment these to activate and customize Celery:
 # CELERY_ALWAYS_EAGER = False  # required to activate celeryd
@@ -62,12 +64,3 @@ SECRET_KEY = ''
 # BROKER_PASSWORD = 'playdoh'
 # BROKER_VHOST = 'playdoh'
 # CELERY_RESULT_BACKEND = 'amqp'
-
-## Log settings
-
-# SYSLOG_TAG = "http_app_playdoh"  # Make this unique to your project.
-# LOGGING = dict(loggers=dict(playdoh={'level': logging.DEBUG}))
-
-# Common Event Format logging parameters
-#CEF_PRODUCT = 'Playdoh'
-#CEF_VENDOR = 'Mozilla'
